# RustMEOS

./: .gitignore  .gitmodules  Cargo.toml  README.md  output.rs  test.rs  wrapper.h
.github/workflows/: rust.yml
examples/: 01_hello_world.rs  02_ais_example.rs  02_ais_read.rs  03_ais_assemble.rs  ais_full_assemble.rs
meos-book/: book.toml
src/: errors.rs  lib.rs  main.rs  utils.rs
src/boxes/: box.rs  mod.rs  stbox.rs  tbox.rs
src/collections/: mod.rs
src/collections/base/: collection.rs  mod.rs  span.rs  span_set.rs
src/collections/datetime/: date_span.rs  date_span_set.rs  mod.rs  tstz_span.rs  tstz_span_set.rs
src/collections/number/: float_span.rs  float_span_set.rs  int_span.rs  int_span_set.rs  mod.rs  number_span.rs  number_span_set.rs
src/temporal/: interpolation.rs  mod.rs  tbool.rs  temporal.rs  tinstant.rs  tsequence.rs  tsequence_set.rs  ttext.rs
src/temporal/number/: mod.rs  tfloat.rs  tint.rs  tnumber.rs
src/temporal/point/: mod.rs  tgeogpoint.rs  tgeompoint.rs  tpoint.rs
sys/: Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
sys/meos-src/: Cargo.toml  build.rs
sys/prebuilt-bindings/: meos_1.1.rs  meos_1.2.rs
sys/src/: lib.rs
