[package]
name = "meos"
version = "0.1.0"
license-file = "LICENSE"
authors = ["David García Morillo <david.garcia.morillo@ulb.be>"]
repository = "https://github.com/MobilityDB/RustMEOS"
documentation = "https://docs.rs/crate/meos/"
keywords = ["meos", "libmeos", "mobility", "geotemporal", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
description = "Rust bindings for MEOS C API"
readme = "README.md"
edition = "2021"

[dependencies]
paste = "1.0.15"
meos-sys = { path = "sys", version = "0.1.0" }
chrono = "0.4.38"
libc = "0.2.155"
bitmask-enum = "2.2.4"
geos = { version = "9.0.0", optional = true }

[features]
default = ["geos"]