[package]
name = "meos-sys"
version = "0.1.1"
authors = ["David García Morillo <david.garcia.morillo@ulb.be>"]

repository = "https://github.com/MobilityDB/RustMEOS"
documentation = "https://docs.rs/crate/meos-sys/"
keywords = ["meos", "libmeos", "mobility", "geotemporal", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
description = "MEOS C API bindings"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
links = "meos"

[dependencies]
