[package]
name = "meos-sys"
version = "0.1.8"
authors = ["David García Morillo <david.garcia.morillo@ulb.be>"]

repository = "https://github.com/MobilityDB/meos-rs"
documentation = "https://docs.rs/crate/meos-sys/"
keywords = ["meos", "libmeos", "mobility", "geotemporal", "gis"]
categories = ["external-ffi-bindings", "algorithms"]
description = "MEOS C API bindings"
readme = "README.md"
license-file = "LICENSE"
edition = "2021"
links = "meos"

[dependencies]
meos-src = { path = "./meos-src", version = "0.1.0", optional = true }

[build-dependencies]
pkg-config = "0.3.30"
cmake = "0.1"
bindgen = { version = "0.70.1", optional = true }

[features]
default = []
v1_1 = []
v1_2 = []

bindgen = ["dep:bindgen"]
bundled = ["bindgen", "dep:meos-src"]