[package]
name = "meos-src"
version = "0.1.3"
edition = "2021"
links = "meossrc"
build = "build.rs"
description = "static library build for meos-sys"
repository = "https://github.com/MobilityDB/RustMEOS"
authors = ["David García Morillo <david.garcia.morillo@ulb.be>"]
license-file = "LICENSE"
exclude = ["source/tests"]

[build-dependencies]
cmake = "0.1"